added table and table style

--- a/play.html
+++ b/play.html
@@ -43,5 +43,35 @@
         
         <h5 class=consp4>FOURTH CONSP</h5>
         <p class="speech consp4">To obey.</p>
+
+        <hr>
+
+        <table>
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Offer</th>
+            </tr>
+            <tr>
+                <td>President</td>
+                <td>Jessie Eisenberg</td>
+                <td>$2m</td>
+            </tr>
+            <tr>
+                <td>Conspirator 1</td>
+                <td>Robert De Niro</td>
+                <td>$1m</td>
+            </tr>
+            <tr>
+                <td>Conspirator 2</td>
+                <td>Zac Efron</td>
+                <td>$1m</td>
+            </tr>
+            <tr>
+                <td>Conspirator 4</td>
+                <td>Jack Black</td>
+                <td>$1m</td>
+            </tr>
+        </table>
     </body>
 </html>
