--- a/play.html
+++ b/play.html
@@ -40,7 +40,7 @@
         
         <h5 class=pres>PRES</h5>
         <p class="speech pres">What is our duty?</p>
-        
+
         <h5 class=consp4>FOURTH CONSP</h5>
         <p class="speech consp4">To obey.</p>
 
@@ -73,5 +73,9 @@
                 <td>$1m</td>
             </tr>
         </table>
+
+        <hr>
+
+        <a href="play2.html">Page 2</a>
     </body>
 </html>
